--- a/index.html
+++ b/index.html
@@ -165,14 +165,17 @@
 </script>
 
    <script>
-  if ("serviceWorker" in navigator) {
-    navigator.serviceWorker.register("/rajulaundry/service-worker.js")
-      .then(() => console.log("Service Worker registered"));
-  }
+    if ("serviceWorker" in navigator) {
+      navigator.serviceWorker.register("service-worker.js")
+        .then(() => console.log("Service Worker registered"))
+        .catch(err => console.error("SW failed", err));
+    }
 </script>
+
 
 </body>
 </html>
+
 
 
 
