--- a/index.html
+++ b/index.html
@@ -39,60 +39,107 @@
     </section>
 
     <!-- SERVICES -->
-    <section class="services">
-        <h2 class="section-title">Our Services</h2>
+   <section class="services">
+    <h2 class="section-title">Our Services</h2>
 
-        <div class="service-grid">
-            <div class="service-card">
-                <div class="service-icon">🧺</div>
-                <h3>Wash & Fold</h3>
-                <p>Daily wear cleaned & folded</p>
-            </div>
+    <div class="service-grid">
 
-            <div class="service-card">
-                <div class="service-icon">👔</div>
-                <h3>Dry Cleaning</h3>
-                <p>Premium fabric care</p>
+        <div class="service-card">
+            <div class="service-icon">
+                <img src="Images/icons/wash.png" alt="Wash & Fold">
             </div>
-
-            <div class="service-card">
-                <div class="service-icon">🧼</div>
-                <h3>Ironing</h3>
-                <p>Steam press finish</p>
-            </div>
+            <h3>Wash & Fold</h3>
+            <p>Daily wear cleaned & folded</p>
         </div>
-    </section>
+
+        <div class="service-card">
+            <div class="service-icon">
+                <img src="Images/icons/dry-cleaning.png" alt="Dry Cleaning">
+            </div>
+            <h3>Dry Cleaning</h3>
+            <p>Premium fabric care</p>
+        </div>
+
+        <div class="service-card">
+            <div class="service-icon">
+                <img src="Images/icons/ironing-board.png" alt="Ironing">
+            </div>
+            <h3>Ironing</h3>
+            <p>Steam press finish</p>
+        </div>
+
+    </div>
+</section>
+
 
     <!-- PRICE LIST -->
 <section class="pricing">
-    <h2>Price List</h2>
+    <h2 class="section-title">Price List</h2>
 
-    <div class="pricing-table-wrapper">
-        <table class="pricing-table">
-            <thead>
-                <tr>
-                    <th>Item</th>
-                    <th>Price (₹)</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Shirt / T-Shirt</td>
-                    <td>10</td>
-                </tr>
-                <tr>
-                    <td>Pant / Jeans</td>
-                    <td>15</td>
-                </tr>
-                <tr>
-                    <td>Bedsheet</td>
-                    <td>40</td>
-                </tr>
-                <tr>
-                    <td>Blanket</td>
-                    <td>80</td>
-                </tr>
-            </tbody>
+    <div class="price-box">
+        <table>
+            <tr>
+                <th>Service</th>
+                <th>Price (₹)</th>
+            </tr>
+
+            <!-- IRONING -->
+            <tr class="price-section">
+                <td colspan="2">🔥 Ironing</td>
+            </tr>
+
+            <tr>
+                <td>Per Cloth (Shirt / Pant / T-Shirt)</td>
+                <td>7</td>
+            </tr>
+            <tr>
+                <td>Normal Saree</td>
+                <td>40</td>
+            </tr>
+            <tr>
+                <td>Single Bedsheet</td>
+                <td>30</td>
+            </tr>
+            <tr>
+                <td>Double Bedsheet</td>
+                <td>60</td>
+            </tr>
+            <tr>
+                <td>Blanket</td>
+                <td>70</td>
+            </tr>
+            <tr>
+                <td>Coat</td>
+                <td>80</td>
+            </tr>
+
+            <!-- DRY CLEANING -->
+            <tr class="price-section">
+                <td colspan="2">🧼 Dry Cleaning</td>
+            </tr>
+
+            <tr>
+                <td>Per Cloth</td>
+                <td>70</td>
+            </tr>
+            <tr>
+                <td>Normal Saree</td>
+                <td>150</td>
+            </tr>
+            <tr>
+                <td>Coat</td>
+                <td>200</td>
+            </tr>
+
+            <!-- NOTE -->
+            <tr class="price-note">
+                <td colspan="2">
+                    <strong>Note:</strong><br>
+                    Premium material sarees and complex garments are charged
+                    separately based on fabric and work.
+                </td>
+            </tr>
+
         </table>
     </div>
 </section>
@@ -175,6 +222,7 @@
 
 </body>
 </html>
+
 
 
 
