--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div class="service-card">
             <div class="service-icon">
-                <img src="Images/icons/wash.png" alt="Wash & Fold">
+                <img src="images/icons/wash.png" alt="Wash & Fold">
             </div>
             <h3>Wash & Fold</h3>
             <p>Daily wear cleaned & folded</p>
@@ -54,7 +54,7 @@
 
         <div class="service-card">
             <div class="service-icon">
-                <img src="Images/icons/dry-cleaning.png" alt="Dry Cleaning">
+                <img src="images/icons/dry-cleaning.png" alt="Dry Cleaning">
             </div>
             <h3>Dry Cleaning</h3>
             <p>Premium fabric care</p>
@@ -62,7 +62,7 @@
 
         <div class="service-card">
             <div class="service-icon">
-                <img src="Images/icons/ironing-board.png" alt="Ironing">
+                <img src="images/icons/ironing-board.png" alt="Ironing">
             </div>
             <h3>Ironing</h3>
             <p>Steam press finish</p>
@@ -222,6 +222,7 @@
 
 </body>
 </html>
+
 
 
 
