--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
             <!-- IRONING -->
             <tr class="price-section">
-                <td colspan="2">🔥 Ironing</td>
+                <td colspan="2">👔 Ironing</td>
             </tr>
 
             <tr>
@@ -114,7 +114,7 @@
 
             <!-- DRY CLEANING -->
             <tr class="price-section">
-                <td colspan="2">🧼 Dry Cleaning</td>
+                <td colspan="2">🧥 Dry Cleaning</td>
             </tr>
 
             <tr>
@@ -232,6 +232,7 @@
 
 </body>
 </html>
+
 
 
 
